<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Profile">

    <ImageView
        android:id="@+id/rect"
        android:layout_width="match_parent"
        android:layout_height="250dp"
        android:background="@color/colorBlue"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:contentDescription="@null" />

    <ImageView
        android:id="@+id/back_button"
        android:layout_width="30dp"
        android:layout_height="30dp"
        android:layout_marginLeft="15dp"
        android:src="@drawable/ic_arrow_back"
        app:layout_constraintBottom_toBottomOf="@+id/title"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@id/title"
        android:contentDescription="@null" />

    <TextView
        android:id="@+id/title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="7dp"
        android:fontFamily="@font/roboto_light"
        android:text="@string/profile_title"
        android:textColor="@color/colorWhite"
        android:textSize="25sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <ImageView
        android:id="@+id/round_shape"
        android:layout_width="145dp"
        android:layout_height="145dp"
        android:layout_marginTop="25dp"
        android:src="@drawable/round_shape_white"
        app:layout_constraintEnd_toEndOf="@id/title"
        app:layout_constraintStart_toStartOf="@id/title"
        app:layout_constraintTop_toBottomOf="@id/title"
        android:contentDescription="@null" />

    <ImageView
        android:layout_width="90dp"
        android:layout_height="90dp"
        android:src="@mipmap/profile"
        android:tint="@color/colorWhite"
        app:layout_constraintBottom_toBottomOf="@id/round_shape"
        app:layout_constraintEnd_toEndOf="@id/round_shape"
        app:layout_constraintStart_toStartOf="@id/round_shape"
        app:layout_constraintTop_toTopOf="@id/round_shape"
        android:contentDescription="@null" />

    <TextView
        android:id="@+id/name_hint"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@id/rect"
        app:layout_constraintStart_toStartOf="parent"
        android:layout_marginLeft="15dp"
        android:layout_marginTop="15dp"
        android:layout_marginRight="15dp"
        android:textColor="@color/colorLightBlack"
        android:textSize="14sp"
        android:fontFamily="@font/roboto_light"
        android:text="@string/name_hint" />

    <TextView
        android:id="@+id/name"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@id/name_hint"
        app:layout_constraintStart_toStartOf="parent"
        android:layout_marginLeft="15dp"
        android:layout_marginRight="15dp"
        android:textColor="@color/colorBlack"
        android:textSize="18sp"
        android:fontFamily="@font/roboto_light"
        android:text="@string/name_text" />

    <TextView
        android:id="@+id/score_hint"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@id/rect"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_marginLeft="15dp"
        android:layout_marginTop="15dp"
        android:layout_marginRight="15dp"
        android:textColor="@color/colorLightBlack"
        android:textSize="14sp"
        android:fontFamily="@font/roboto_light"
        android:text="@string/score_hint" />

    <ImageView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:src="@mipmap/coin"
        app:layout_constraintEnd_toStartOf="@id/score"
        app:layout_constraintTop_toTopOf="@id/score"
        app:layout_constraintBottom_toBottomOf="@id/score"
        android:layout_marginRight="5dp"/>

    <TextView
        android:id="@+id/score"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@id/name_hint"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_marginLeft="15dp"
        android:layout_marginRight="15dp"
        android:textColor="@color/colorBlack"
        android:textSize="18sp"
        android:fontFamily="@font/roboto_light"
        android:text="@string/score_text" />

    <TextView
        android:id="@+id/mobile_hint"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@id/name"
        app:layout_constraintStart_toStartOf="parent"
        android:layout_marginLeft="15dp"
        android:layout_marginTop="15dp"
        android:layout_marginRight="15dp"
        android:textColor="@color/colorLightBlack"
        android:textSize="14sp"
        android:fontFamily="@font/roboto_light"
        android:text="@string/mobile_hint" />

    <TextView
        android:id="@+id/mobile"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@id/mobile_hint"
        app:layout_constraintStart_toStartOf="parent"
        android:layout_marginLeft="15dp"
        android:layout_marginRight="15dp"
        android:textColor="@color/colorBlack"
        android:textSize="18sp"
        android:fontFamily="@font/roboto_light"
        android:text="@string/mobile_number_text" />

    <TextView
        android:id="@+id/email_hint"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@id/mobile"
        app:layout_constraintStart_toStartOf="parent"
        android:layout_marginLeft="15dp"
        android:layout_marginTop="15dp"
        android:layout_marginRight="15dp"
        android:textColor="@color/colorLightBlack"
        android:textSize="14sp"
        android:fontFamily="@font/roboto_light"
        android:text="@string/email_hint" />

    <TextView
        android:id="@+id/email"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@id/email_hint"
        app:layout_constraintStart_toStartOf="parent"
        android:layout_marginLeft="15dp"
        android:layout_marginRight="15dp"
        android:textColor="@color/colorBlack"
        android:textSize="18sp"
        android:fontFamily="@font/roboto_light"
        android:text="@string/email" />

    <TextView
        android:id="@+id/password_hint"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@id/email"
        app:layout_constraintStart_toStartOf="parent"
        android:layout_marginLeft="15dp"
        android:layout_marginTop="15dp"
        android:layout_marginRight="15dp"
        android:textColor="@color/colorLightBlack"
        android:textSize="14sp"
        android:fontFamily="@font/roboto_light"
        android:text="@string/password_hint" />

    <TextView
        android:id="@+id/password"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@id/password_hint"
        app:layout_constraintStart_toStartOf="parent"
        android:layout_marginLeft="15dp"
        android:layout_marginRight="15dp"
        android:textColor="@color/colorBlack"
        android:textSize="18sp"
        android:fontFamily="@font/roboto_light"
        android:text="@string/password_text" />

    <Button
        android:id="@+id/save_button"
        style="?android:attr/borderlessButtonStyle"
        android:layout_width="250dp"
        android:layout_height="50dp"
        android:background="@drawable/oval_button_submit_blue"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_marginTop="15dp"
        android:layout_marginBottom="20dp"
        android:text="@string/save_text"
        android:textColor="@color/colorWhite"
        android:fontFamily="@font/roboto_light"
        android:textSize="18sp"
        android:textAllCaps="false"/>

</androidx.constraintlayout.widget.ConstraintLayout>