<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/background_login"
    tools:context=".Referral">

    <ImageView
        android:id="@+id/round_shape"
        android:layout_width="210dp"
        android:layout_height="210dp"
        android:background="@drawable/round_shape_white"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:layout_marginTop="50dp"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/company_name"
        android:fontFamily="@font/roboto_light"
        android:textColor="@color/colorWhite"
        android:textAlignment="center"
        android:textSize="42sp"
        android:lineHeight="45dp"
        app:layout_constraintTop_toTopOf="@id/round_shape"
        app:layout_constraintStart_toStartOf="@id/round_shape"
        app:layout_constraintEnd_toEndOf="@id/round_shape"
        app:layout_constraintBottom_toBottomOf="@id/round_shape"/>

    <ImageView
        android:id="@+id/rect"
        android:layout_width="0dp"
        android:layout_height="290dp"
        android:background="@drawable/rounded_rect_white"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        android:layout_marginBottom="15dp"
        android:layout_marginLeft="15dp"
        android:layout_marginRight="15dp"/>

    <TextView
        android:id="@+id/registration_text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/register"
        android:fontFamily="@font/roboto_light"
        android:textSize="24sp"
        android:textStyle="bold"
        android:textColor="@color/colorBlack"
        app:layout_constraintTop_toTopOf="@id/rect"
        app:layout_constraintStart_toStartOf="@id/continue_button"
        app:layout_constraintBottom_toTopOf="@id/referral_text"
        android:layout_marginTop="17dp"
        />

    <TextView
        android:id="@+id/referral_text"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:text="@string/referral_text"
        android:textAlignment="center"
        android:textSize="18sp"
        android:textColor="@color/colorBlack"
        android:fontFamily="@font/roboto_light"
        app:layout_constraintStart_toStartOf="@id/continue_button"
        app:layout_constraintEnd_toEndOf="@id/continue_button"
        app:layout_constraintTop_toBottomOf="@id/registration_text"
        app:layout_constraintBottom_toTopOf="@id/code_enter"
        android:layout_marginTop="10dp"
        />

    <EditText
        android:id="@+id/code_enter"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:hint="@string/enter_code"
        android:textColorHint="@color/colorBlack"
        app:layout_constraintStart_toStartOf="@id/continue_button"
        app:layout_constraintTop_toBottomOf="@id/referral_text"
        app:layout_constraintEnd_toEndOf="@id/continue_button"
        app:layout_constraintBottom_toTopOf="@id/continue_button"
        android:fontFamily="@font/roboto_light"
        android:textColor="@color/colorBlack"
        android:maxLines="1"
        android:inputType="text"
        android:textSize="18sp"
        android:layout_marginTop="10dp"/>

    <Button
        android:id="@+id/continue_button"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:background="@drawable/rounded_rect_button_black"
        android:text="@string/continue_text"
        android:fontFamily="@font/roboto_light"
        android:textColor="@color/colorWhite"
        android:textSize="18sp"
        android:textAllCaps="false"
        app:layout_constraintStart_toStartOf="@id/rect"
        app:layout_constraintEnd_toEndOf="@id/rect"
        app:layout_constraintTop_toBottomOf="@id/code_enter"
        app:layout_constraintBottom_toTopOf="@id/skip_text"
        style="?android:attr/borderlessButtonStyle"
        android:layout_marginTop="10dp"
        android:layout_marginLeft="25dp"
        android:layout_marginRight="25dp"/>

    <TextView
        android:id="@+id/skip_text"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:text="@string/skip"
        android:textAlignment="center"
        android:textSize="18sp"
        android:textColor="@color/colorBlack"
        android:fontFamily="@font/roboto_light"
        app:layout_constraintStart_toStartOf="@id/continue_button"
        app:layout_constraintEnd_toEndOf="@id/continue_button"
        app:layout_constraintTop_toBottomOf="@id/continue_button"
        app:layout_constraintBottom_toBottomOf="@id/rect"
        android:layout_marginTop="10dp"
        android:layout_marginBottom="10dp"/>

</androidx.constraintlayout.widget.ConstraintLayout>