<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorWhite"
    tools:context=".Repair">

    <ImageView
        android:id="@+id/rect"
        android:layout_width="match_parent"
        android:layout_height="250dp"
        android:background="@color/colorBlue"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:contentDescription="@null" />

    <ImageView
        android:id="@+id/back_button"
        android:layout_width="30dp"
        android:layout_height="30dp"
        android:layout_marginLeft="15dp"
        android:src="@drawable/ic_arrow_back"
        app:layout_constraintBottom_toBottomOf="@+id/title"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@id/title"
        android:contentDescription="@null" />

    <TextView
        android:id="@+id/title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="7dp"
        android:fontFamily="@font/roboto_light"
        android:text="@string/repair_title"
        android:textColor="@color/colorWhite"
        android:textSize="25sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <ImageView
        android:id="@+id/round_shape"
        android:layout_width="145dp"
        android:layout_height="145dp"
        android:layout_marginTop="25dp"
        android:src="@drawable/round_shape_white"
        app:layout_constraintEnd_toEndOf="@id/title"
        app:layout_constraintStart_toStartOf="@id/title"
        app:layout_constraintTop_toBottomOf="@id/title"
        android:contentDescription="@null" />

    <ImageView
        android:layout_width="90dp"
        android:layout_height="90dp"
        android:layout_marginTop="7dp"
        android:layout_marginRight="7dp"
        android:src="@mipmap/schedule_big"
        android:tint="@color/colorWhite"
        app:layout_constraintBottom_toBottomOf="@id/round_shape"
        app:layout_constraintEnd_toEndOf="@id/round_shape"
        app:layout_constraintStart_toStartOf="@id/round_shape"
        app:layout_constraintTop_toTopOf="@id/round_shape"
        android:contentDescription="@null" />

    <EditText
        android:id="@+id/topic"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@id/rect"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_marginLeft="15dp"
        android:layout_marginRight="15dp"
        android:hint="@string/topic"
        android:inputType="text"
        android:textColor="@color/colorBlack"
        android:fontFamily="@font/roboto_light"
        android:maxLines="1"/>

    <EditText
        android:id="@+id/model"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@id/topic"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_marginLeft="15dp"
        android:layout_marginRight="15dp"
        android:hint="@string/model"
        android:inputType="text"
        android:textColor="@color/colorBlack"
        android:fontFamily="@font/roboto_light"
        android:maxLines="1"/>

    <EditText
        android:id="@+id/comment"
        android:layout_width="0dp"
        android:layout_height="0dp"
        app:layout_constraintTop_toBottomOf="@id/model"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintBottom_toTopOf="@id/date"
        android:layout_marginLeft="15dp"
        android:layout_marginRight="15dp"
        android:minHeight="100dp"
        android:hint="@string/comment"
        android:inputType="textMultiLine"
        android:gravity="top|start"
        android:textColor="@color/colorBlack"
        android:fontFamily="@font/roboto_light" />

    <EditText
        android:id="@+id/date"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@id/comment"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toStartOf="@id/time"
        app:layout_constraintBottom_toTopOf="@id/send_button"
        android:layout_marginLeft="15dp"
        android:layout_marginBottom="30dp"
        android:hint="@string/date"
        android:inputType="date"
        android:fontFamily="@font/roboto_light"
        android:focusable="false"
        android:textColor="@color/colorBlack"
        android:drawableEnd="@drawable/ic_arrow_down"/>

    <EditText
        android:id="@+id/time"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@id/comment"
        app:layout_constraintStart_toEndOf="@id/date"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_marginRight="15dp"
        android:hint="@string/times"
        android:inputType="time"
        android:fontFamily="@font/roboto_light"
        android:focusable="false"
        android:textColor="@color/colorBlack"
        android:drawableEnd="@drawable/ic_arrow_down"/>

    <Button
        android:id="@+id/send_button"
        style="?android:attr/borderlessButtonStyle"
        android:layout_width="250dp"
        android:layout_height="50dp"
        android:background="@drawable/oval_button_submit_blue"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_marginTop="15dp"
        android:layout_marginBottom="20dp"
        android:text="@string/send"
        android:textColor="@color/colorWhite"
        android:fontFamily="@font/roboto_light"
        android:textSize="18sp"
        android:textAllCaps="false"/>

</androidx.constraintlayout.widget.ConstraintLayout>